fix: remove identity swagger comments, identityStats from usage handler
